--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,15 @@
   "description": "My Steganography manager",
   "icons": [
     { "src": "/favicon.ico", "type": "image/x-icon", "sizes": "16x16 32x32" },
+    { "src": "/icon-144.png", "type": "image/png", "sizes": "144x144" },
     { "src": "/icon-192.png", "type": "image/png", "sizes": "192x192" },
     { "src": "/icon-512.png", "type": "image/png", "sizes": "512x512" },
+    {
+      "src": "/icon-144-maskable.png",
+      "type": "image/png",
+      "sizes": "144x144",
+      "purpose": "maskable"
+    },
     {
       "src": "/icon-192-maskable.png",
       "type": "image/png",
