--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,58 +1,16 @@
 {
-  "version": "1.0.0",
   "manifest_version": 3,
-  "name": "Stega",
-  "short_name": "Stega",
-  "background_color": "#1D1D1D",
-  "theme_color": "#1D1D1D",
-  "description": "My Steganography manager",
+  "name": "Run script automatically",
+  "description": "Runs a script on www.example.com automatically when user installs the extension",
+  "version": "1.0",
   "action": {
-    "default_popup": "js/index.html",
-    "default_title": "Stega"
+    "default_popup": "index.html",
+    "default_title": "Open the popup"
   },
-  "icons": [
-    {
-      "src": "/favicon.ico",
-      "type": "image/x-icon",
-      "sizes": "32x32"
-    },
-    {
-      "src": "/icon-144.png",
-      "type": "image/png",
-      "sizes": "144x144",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "any"
-    },
-    {
-      "src": "/icon-144-maskable.png",
-      "type": "image/png",
-      "sizes": "144x144",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icon-192-maskable.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icon-512-maskable.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
-    }
-  ],
-  "start_url": ".",
-  "display": "fullscreen"
+  "icons": {
+    "16": "images/icon-16.png",
+    "32": "images/icon-32.png",
+    "48": "images/icon-48.png",
+    "128": "images/icon-128.png"
+  }
 }
